[INTERNAL][FIX] sap.m.GenericTile: Tiles no longer shift if no content is rendered
Amend: Icda91160741e152b1e81431e38794314c58deca3
CR-Id: 012006153200001527272016

--- a/src/sap.m/src/sap/m/themes/base/GenericTile.less
+++ b/src/sap.m/src/sap/m/themes/base/GenericTile.less
@@ -9,7 +9,6 @@
 	outline: none;
 	box-sizing: border-box;
 	background-position: 0px;
-	overflow: hidden;
 }
 
 .sapMGT.sapMPointer * {
@@ -53,9 +52,11 @@
 }
 
 .sapMGTContent {
+	height: 6.375rem;
 	display: inline-block;
 	white-space: nowrap;
 	width: 100%;
+	overflow: hidden;
 }
 
 .sapMGTHdrTxt {
@@ -412,6 +413,10 @@ html[data-sap-ui-browser*='ie'], html[data-sap-ui-browser*='ed'], html[data-sap-
 	.sapMGT.TwoByOne {
 		width: 19rem;
 		height: 9.25rem;
+	}
+
+	.sapMGTContent {
+		height: 5.5rem;
 	}
 
 	.sapMGTHdrContent {
